--- a/styles/main.css
+++ b/styles/main.css
@@ -1,5 +1,15 @@
-circle {
-  fill: teal;
-  stroke: red;
-  stroke-width: 2px;
+svg {
+  border: solid 1px;
+}
+
+.axis path,
+.axis line {
+  fill: none;
+  stroke: #000;
+  shape-rendering: crispEdges;
+}
+
+.axis text {
+  font-family: sans-serif;
+  font-size: 1.2em;
 }
